--- a/dbs.yaml
+++ b/dbs.yaml
@@ -12,7 +12,7 @@ db_table_name	:
 db_sql_filename	: 
 
 plugin_menu		:
-	- urlTitle: View Register
+	- urlTitle: Students
 		urlRules: {siteType: 0, userLevel: 1,2}
 		urlPath: {url: o/admin/manage, attr: -, icon: -}
 		
@@ -20,25 +20,16 @@ plugin_menu		:
 		urlRules: {siteType: 0, userLevel: 1,2}
 		urlPath: {url: o/setting/edit, attr: -, icon: -}
 		submenu :
-			- urlTitle: Years
+			- urlTitle: Address
 				urlRules: {siteType: 0, userLevel: 1,2}
-				urlPath: {url: o/year/manage, attr: -, icon: -}
-			- urlTitle: Batchs
+				urlPath: {url: o/address/manage, attr: -, icon: -}
+			- urlTitle: Health
 				urlRules: {siteType: 0, userLevel: 1,2}
-				urlPath: {url: o/batch/manage, attr: -, icon: -}
-			- urlTitle: Schools
-				urlRules: {siteType: 0, userLevel: 1,2}
-				urlPath: {url: o/school/manage, attr: -, icon: -}
-			- urlTitle: Courses
-				urlRules: {siteType: 0, userLevel: 1,2}
-				urlPath: {url: o/course/manage, attr: -, icon: -}
-			- urlTitle: Religions
-				urlRules: {siteType: 0, userLevel: 1,2}
-				urlPath: {url: o/religion/manage, attr: -, icon: -}
+				urlPath: {url: o/health/manage, attr: -, icon: -}
 
 content_menu	:
 # controller o/admin
-	- urlTitle: Add Register
+	- urlTitle: Add Student
 		urlRules: {psb, o/admin, manage, siteType: 0, userLevel: 1,2}
 		urlPath: {url: add, attr: -, icon: -}
 		
@@ -46,39 +37,28 @@ content_menu	:
 		urlRules: {psb, o/admin, add,edit,view, siteType: 0, userLevel: 1,2}
 		urlPath: {url: manage, attr: -, icon: -}
 		
-	- urlTitle: View Register
+	- urlTitle: View Student
 		urlRules: {psb, o/admin, edit, siteType: 0,1, userLevel: 1,2}
 		urlPath: {url: view, attr: id=$_GET*id, icon: -}
 		
-	- urlTitle: Edit Register
+	- urlTitle: Edit Student
 		urlRules: {psb, o/admin, view, siteType: 0,1, userLevel: 1,2}
 		urlPath: {url: edit, attr: id=$_GET*id, icon: -}
 		
-# controller o/year
-	- urlTitle: Add Year
-		urlRules: {psb, o/year, manage, siteType: 0, userLevel: 1,2}
+# controller o/address
+	- urlTitle: Add Student Address
+		urlRules: {psb, o/address, manage, siteType: 0, userLevel: 1,2}
 		urlPath: {url: add, attr: -, icon: -}
 		
 	- urlTitle: Back to Manage
-		urlRules: {psb, o/year, edit, siteType: 0, userLevel: 1,2}
+		urlRules: {psb, o/address, edit, siteType: 0, userLevel: 1,2}
 		urlPath: {url: manage, attr: -, icon: -}
 		
-# controller o/batch
-	- urlTitle: Add Batch
-		urlRules: {psb, o/batch, manage, siteType: 0, userLevel: 1,2}
+# controller o/health
+	- urlTitle: Add Student Health
+		urlRules: {psb, o/health, manage, siteType: 0, userLevel: 1,2}
 		urlPath: {url: add, attr: -, icon: -}
 		
-# controller o/school
-	- urlTitle: Add School
-		urlRules: {psb, o/school, manage, siteType: 0, userLevel: 1,2}
-		urlPath: {url: add, attr: -, icon: -}
-		
-# controller o/course
-	- urlTitle: Add Course
-		urlRules: {psb, o/course, manage, siteType: 0, userLevel: 1,2}
-		urlPath: {url: add, attr: -, icon: -}
-		
-# controller o/religion
-	- urlTitle: Add Religion
-		urlRules: {psb, o/religion, manage, siteType: 0, userLevel: 1,2}
-		urlPath: {url: add, attr: -, icon: -}
+	- urlTitle: Back to Manage
+		urlRules: {psb, o/health, edit, siteType: 0, userLevel: 1,2}
+		urlPath: {url: manage, attr: -, icon: -}
