--- a/dbs.yaml
+++ b/dbs.yaml
@@ -13,52 +13,52 @@ db_sql_filename	:
 
 plugin_menu		:
 	- urlTitle: Students
-		urlRules: {siteType: 0, userLevel: 1,2}
+		urlRules: {siteType: 0, userLevel: "1,2"}
 		urlPath: {url: o/admin/manage, attr: -, icon: -}
 		
 	- urlTitle: Settings
-		urlRules: {siteType: 0, userLevel: 1,2}
+		urlRules: {siteType: 0, userLevel: "1,2"}
 		urlPath: {url: o/setting/edit, attr: -, icon: -}
 		submenu :
 			- urlTitle: Address
-				urlRules: {siteType: 0, userLevel: 1,2}
+				urlRules: {siteType: 0, userLevel: "1,2"}
 				urlPath: {url: o/address/manage, attr: -, icon: -}
 			- urlTitle: Health
-				urlRules: {siteType: 0, userLevel: 1,2}
+				urlRules: {siteType: 0, userLevel: "1,2"}
 				urlPath: {url: o/health/manage, attr: -, icon: -}
 
 content_menu	:
 # controller o/admin
 	- urlTitle: Add Student
-		urlRules: {psb, o/admin, manage, siteType: 0, userLevel: 1,2}
+		urlRules: {psb, o/admin, manage, siteType: 0, userLevel: "1,2"}
 		urlPath: {url: add, attr: -, icon: -}
 		
 	- urlTitle: Back to Manage
-		urlRules: {psb, o/admin, add,edit,view, siteType: 0, userLevel: 1,2}
+		urlRules: {psb, o/admin, "add,edit,view", siteType: 0, userLevel: "1,2"}
 		urlPath: {url: manage, attr: -, icon: -}
 		
 	- urlTitle: View Student
-		urlRules: {psb, o/admin, edit, siteType: 0,1, userLevel: 1,2}
+		urlRules: {psb, o/admin, edit, siteType: "0,1", userLevel: "1,2"}
 		urlPath: {url: view, attr: id=$_GET*id, icon: -}
 		
 	- urlTitle: Edit Student
-		urlRules: {psb, o/admin, view, siteType: 0,1, userLevel: 1,2}
+		urlRules: {psb, o/admin, view, siteType: "0,1", userLevel: "1,2"}
 		urlPath: {url: edit, attr: id=$_GET*id, icon: -}
 		
 # controller o/address
 	- urlTitle: Add Student Address
-		urlRules: {psb, o/address, manage, siteType: 0, userLevel: 1,2}
+		urlRules: {psb, o/address, manage, siteType: 0, userLevel: "1,2"}
 		urlPath: {url: add, attr: -, icon: -}
 		
 	- urlTitle: Back to Manage
-		urlRules: {psb, o/address, edit, siteType: 0, userLevel: 1,2}
+		urlRules: {psb, o/address, edit, siteType: 0, userLevel: "1,2"}
 		urlPath: {url: manage, attr: -, icon: -}
 		
 # controller o/health
 	- urlTitle: Add Student Health
-		urlRules: {psb, o/health, manage, siteType: 0, userLevel: 1,2}
+		urlRules: {psb, o/health, manage, siteType: 0, userLevel: "1,2"}
 		urlPath: {url: add, attr: -, icon: -}
 		
 	- urlTitle: Back to Manage
-		urlRules: {psb, o/health, edit, siteType: 0, userLevel: 1,2}
+		urlRules: {psb, o/health, edit, siteType: 0, userLevel: "1,2"}
 		urlPath: {url: manage, attr: -, icon: -}
